# Estormi

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  NOTICE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: .secrets.baseline  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  ios.yml  js.yml  release.yml  rust.yml  security.yml  test.yml
apps/: README.md
apps/estormi-cloud/: .gitignore  README.md  project.yml
apps/estormi-ios/: .gitignore  README.md  project.yml
apps/estormi-macos/: Cargo.toml  Estormi.entitlements  Info.plist  README.md  THIRD-PARTY-RUST.md  about.hbs  about.toml  audit.toml  rust-toolchain.toml  tauri.conf.json
apps/estormi-macos/capabilities/: default.json
apps/estormi-macos/icons/: icon.icns
apps/estormi-macos/src/: datadir.rs  doorbell.rs  imessage.rs  main.rs  tray.rs
apps/estormi-macos/src/whatsapp/: auth.rs  bot.rs  helpers.rs  http.rs  mod.rs  staging.rs  sync.rs  types.rs
assets/brand/: README.md  estormi-illumination-chart.md
assets/fonts/: OFL.txt  SOURCE.md  fonts.css
assets/source-icons/: README.md
docs/: README.md  cloudkit-doorbell.md  connectors.md  design-system.md  estormi-ios.md  google-calendar-sync.md  governor.md  ios-push-notifications.md  mcp.md  migrations.md  naming.md  release.md  setup.md  testing.md
docs/adr/: 0001-local-first-loopback-only.md  0002-collapse-precomputation-engines.md  0003-sqlite-embedded-qdrant.md  0004-mcp-first-class-transport.md  0005-single-engine-mutex.md  0006-icloud-vault-for-ios.md  0007-connectors-single-source.md  0008-python-under-packages-naming-law.md  0009-layering-dag-import-linter.md  0010-main-branch-protection.md  README.md
docs/architecture/: briefing-generation.md  distillation.md  engines.md  macos-entitlements.md  overview.md  rationale.md
docs/specs/: openapi.json  vault-schema.md  whatsapp-rust-sidecar.md
make/: bundle.mk  ingestion.mk  ios.mk  quality.mk  test.mk
make/extra-licenses/: README.md
prompts/: README.md
prompts/companion/: decision-log.md  idea-extraction.md  project-context.md  weekly-review.md
prompts/llm/: briefing_cohesion.j2  briefing_critic.j2  briefing_extractor.j2  briefing_fact_critic.j2  briefing_lede.j2  briefing_plan.j2  briefing_readiness.j2  briefing_thread_writer.j2  knowledge_analysis.j2  knowledge_common_rules.j2  knowledge_consolidation.j2  knowledge_day_vision.j2  knowledge_narration.j2  knowledge_news.j2  knowledge_news_synthesis.j2  knowledge_opinion.j2  knowledge_rss.j2  knowledge_themes.j2
requirements/: requirements-bundle.txt
scripts/: README.md  app.estormi.local.weekly-report.plist  build.sh  daily_ingestion.sh  detect_secrets_gate.py  fix_python_shebangs.sh  freshness_check.py  gen_openapi.py  generate_caps.py  generate_icons.sh  health_check.sh  install.sh  lock_bundle_hashes.py  qa_metrics.py  reset_data.py  run_prompt.sh  security_scan.py  set_version.py  setup-graphify-skill.sh  setup.sh  setup_branch_protection.sh  setup_distill.sh  smoke_test.py  test_suite.sh  vendor_fonts.py  version_badge.py  weekly_report.sh
tests/: README.md  conftest.py  requirements-test.txt
tests/connectors/: test_cli.py  test_connectors.py  test_permission_gate.py
tests/contract/: briefing_payload_schema.json  mcp_tool_surface.json  test_briefing_payload_schema.py  test_bundle_hashes.py  test_bundle_license_collection.py  test_cloudkit_exit_code_parity.py  test_engine_names.py  test_import_linter_layers.py  test_log_format_parity.py  test_marker_convention.py  test_mcp_tool_surface.py  test_no_fastapi_in_memory_core.py  test_no_legacy_engine_refs.py  test_no_legacy_path_refs.py  test_no_real_data.py  test_no_server_imports_in_ingestion.py  test_openapi_spec_current.py  test_quality_contracts.py  test_requirements_consistency.py  test_requirements_lock_consistency.py  test_schema_contract.py  test_schema_dts_current.py  test_shell_emit_call_sites.py  test_shell_ingest_argv_seam.py  test_sidecar_wa_token.py  test_skill_md_references.py  test_tokens_swift_current.py  test_ui_kit_font_tokens.py  test_unique_connector_specs.py  test_version_consistency.py
tests/e2e/: test_memory_lifecycle.py  test_search_roundtrip_real.py
tests/estormi_briefing/: conftest.py  test_actions.py  test_bestof.py  test_briefing_graph.py  test_build_note.py  test_composer.py  test_continuity.py  test_day_load.py  test_day_window.py  test_decode_profiles.py  test_delivery.py  test_enrichments.py  test_exemplars.py  test_fact_lint.py  test_llm.py  test_mcp_io.py  test_narration_lint.py  test_notify_gating.py  test_pipeline.py  test_pipeline_budget.py  test_prompts.py  test_refresh_health.py  test_sources.py  test_synthesis.py  test_timeline.py  test_user_profile.py  test_vision_lint.py  test_world_corpus.py
tests/estormi_distill/: test_distill.py  test_run_distill.py  test_trainer_helpers.py
tests/estormi_ingestion/: test_apns_push.py  test_apple_connector_ingest.py  test_cloudkit_doorbell.py  test_emit.py  test_fetch.py  test_fetch_imessages.py  test_google_calendar_auth.py  test_google_calendar_connector.py  test_http_client.py  test_imessage_chat_id.py  test_ingest_documents.py  test_ingestion.py  test_ingestion_regressions.py  test_knowledge_missing_ytdlp.py  test_macos_permissions.py  test_mail_threading.py  test_pii_filter.py  test_reminders_export.py  test_token_store.py  test_vault_sync.py  test_whatsapp_durable_log.py  test_whatsapp_name_resolution.py  test_whatsapp_windowing.py  test_whoop.py  test_world_watermark.py
tests/estormi_server/: test_api.py  test_api_smoke_uncovered.py  test_briefing_api.py  test_briefing_launcher_lifecycle.py  test_calendar_oauth.py  test_chat_kind_split.py  test_dates_hashes.py  test_distill_api.py  test_distill_launcher_lifecycle.py  test_engine_subprocess_env.py  test_events.py  (+42 more)
(+72 files in other folders)
